// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorList Container should render Default 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-2 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-4 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-4 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-9 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-9:empty {
  min-height: 32px;
}

.emotion-11 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-11:where(.emotion-5:hover .emotion-11) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-11 {
    aspect-ratio: 1;
  }
}

.emotion-13 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #000;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
}

.emotion-13:where(.emotion-5:hover .emotion-13) {
  background-color: #e91e63;
}

.emotion-15 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-15 {
    font-size: 32px;
  }
}

.emotion-17 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-17.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-19 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-21 {
  font-weight: 500;
}

.emotion-23 {
  font-weight: 400;
}

.emotion-25 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-25 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-46 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-46 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<article
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithClassName 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-2 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-4 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-4 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-9 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-9:empty {
  min-height: 32px;
}

.emotion-11 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-11:where(.emotion-5:hover .emotion-11) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-11 {
    aspect-ratio: 1;
  }
}

.emotion-13 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #000;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
}

.emotion-13:where(.emotion-5:hover .emotion-13) {
  background-color: #e91e63;
}

.emotion-15 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-15 {
    font-size: 32px;
  }
}

.emotion-17 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-17.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-19 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-21 {
  font-weight: 500;
}

.emotion-23 {
  font-weight: 400;
}

.emotion-25 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-25 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-46 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-46 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<article
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithEmotion 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-2 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-4 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-4 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-9 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-9:empty {
  min-height: 32px;
}

.emotion-11 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-11:where(.emotion-5:hover .emotion-11) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-11 {
    aspect-ratio: 1;
  }
}

.emotion-13 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #000;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
}

.emotion-13:where(.emotion-5:hover .emotion-13) {
  background-color: #e91e63;
}

.emotion-15 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-15 {
    font-size: 32px;
  }
}

.emotion-17 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-17.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-19 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-21 {
  font-weight: 500;
}

.emotion-23 {
  font-weight: 400;
}

.emotion-25 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-25 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-46 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-46 {
    grid-column-start: 9;
    grid-column-end: 13;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<article
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-46 emotion-5"
        x="8"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;

exports[`AuthorList Container should render WithFilter 1`] = `
<DocumentFragment>
  .emotion-2 {
  display: grid;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 40px;
  grid-template-columns: 1fr;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

@media (min-width:600px) {
  .emotion-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width:900px) {
  .emotion-2 {
    grid-template-columns: repeat(12, 1fr);
  }
}

.emotion-4 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-4 {
    grid-column-start: 1;
    grid-column-end: 5;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

.emotion-6 {
  margin: 0;
  font: inherit;
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  display: grid;
  grid-auto-rows: max-content;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  grid-template-areas: 'image' 'pretitle' 'title' 'lead' 'authors';
}

.emotion-9 {
  grid-column: 1/13;
  width: 100%;
  height: 100%;
  overflow: hidden;
  grid-area: image;
}

.emotion-9:empty {
  min-height: 32px;
}

.emotion-11 {
  max-width: 100%;
  height: auto;
  aspect-ratio: 1.8;
  max-height: 400px;
  object-fit: cover;
  width: 100%;
  grid-column: 1/13;
  -webkit-transition: -webkit-transform 0.3s ease-in-out;
  transition: transform 0.3s ease-in-out;
}

.emotion-11:where(.emotion-5:hover .emotion-11) {
  -webkit-transform: scale(1.1);
  -moz-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
}

@media (min-width:900px) {
  .emotion-11 {
    aspect-ratio: 1;
  }
}

.emotion-13 {
  -webkit-transition: background-color 0.3s ease-in-out;
  transition: background-color 0.3s ease-in-out;
  background-color: #000;
  height: 3px;
  width: 100%;
  margin-bottom: 12px;
}

.emotion-13:where(.emotion-5:hover .emotion-13) {
  background-color: #e91e63;
}

.emotion-15 {
  grid-area: title;
  margin-bottom: 8px;
  margin: 0;
  font-family: Hanken Grotesk,Roboto,sans-serif;
  font-weight: 600;
  line-height: 1.15;
  font-size: 26px;
}

@media (min-width: 900px) {
  .emotion-15 {
    font-size: 32px;
  }
}

.emotion-17 {
  font-weight: 400;
  grid-area: lead;
  margin: 0;
  line-height: 1.7;
  font-family: Merriweather,Roboto,sans-serif;
  font-size: 1rem;
  margin-bottom: 0.35em;
}

.emotion-17.MuiTypography-gutterBottom {
  margin-bottom: 24px;
}

.emotion-19 {
  margin: 0;
  font-size: 12px;
  grid-area: authors;
}

.emotion-21 {
  font-weight: 500;
}

.emotion-23 {
  font-weight: 400;
}

.emotion-25 {
  display: grid;
}

@media (min-width:900px) {
  .emotion-25 {
    grid-column-start: 5;
    grid-column-end: 9;
    grid-row-start: 1;
    grid-row-end: 2;
  }
}

<article
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <article
        class="emotion-4 emotion-5"
        x="0"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
      <article
        class="emotion-25 emotion-5"
        x="4"
        y="0"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-6"
          href="https://example.com"
        >
          <div
            class="emotion-7 emotion-8"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <img
                alt="DSC07717"
                class="emotion-11 emotion-12"
                loading="lazy"
                sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
(max-width: 1600px) 800w,
(max-width: 2000px) 1000w,
1200w"
                srcset="https://unsplash.it/1200/400 1200w,
https://unsplash.it/1000/400 1000w,
https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
                title=""
              />
            </div>
            <div
              class="emotion-13 emotion-14"
            />
            <h1
              class="MuiTypography-root MuiTypography-h4 emotion-15 emotion-16"
            >
              title
            </h1>
            <p
              class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom emotion-17 emotion-18"
            >
              lead
            </p>
            <div
              class="emotion-19 emotion-20"
            >
              <span
                class="emotion-21 emotion-22"
              >
                Von Foobar, Foobar 
              </span>
              <time
                class="emotion-23 emotion-24"
                datetime="2023-01-01T00:00:00.000Z"
              >
                | 01.01.2023 
              </time>
            </div>
          </div>
        </a>
      </article>
    </div>
  </article>
</DocumentFragment>
`;
